// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 jezFKu ring-theme-background"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 fxMAsz ring-theme-background"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 jezFKu ring-theme-background"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 hSjQdl ring-theme-background"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 bWntUS ring-theme-background"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 kOCeHB ring-theme-background"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 kOCeHB ring-theme-background"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-d5u41q-0 cmuOiP ring-theme-background"
  />
</div>
`;
